Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/StringsInSwitch/NonConstantLabel.out
NonConstantLabel.java:13:14: compiler.err.string.const.req
1 error
